--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
+<div class="mt-3">
+    <mat-tab-group>
+        <mat-tab label="All Users Workout List"></mat-tab>
+        <mat-tab label="Workout Progress"></mat-tab>
+    </mat-tab-group>
+
+</div>
