--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,17 @@
 
 <div class="mt-3">
     <mat-tab-group>
-        <mat-tab label="All Users Workout List"></mat-tab>
-        <mat-tab label="Workout Progress"></mat-tab>
+        <mat-tab label="All Users Workout List">
+            <div class="flex-col space-x-10 pt-6">
+                <!-- <app-add-workout
+                (userAdded)="usersComponent.loadUsers();" >
+                </app-add-workout> -->
+                <app-users #usersComponent></app-users>
+            </div>
+        </mat-tab>
+        <mat-tab label="Workout Progress">
+            <app-chart></app-chart>
+        </mat-tab>
     </mat-tab-group>
 
 </div>
