--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -63,10 +63,13 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator
-      [pageSizeOptions]="[5, 10]"
+    <div class="custom-paginator">
+      <button mat-button (click)="paginator.previousPage()" [disabled]="paginator.hasPreviousPage() === false">Previous</button>
       
-      aria-label="Select page of periodic elements">
-    </mat-paginator>
+      <mat-paginator #paginator
+          [pageSizeOptions]="[5, 10]">
+      </mat-paginator>
+      <button mat-button (click)="paginator.nextPage()" [disabled]="paginator.hasNextPage() === false">Next</button>
+    </div>
   </div>
 </div>
